--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
         </div>
         <div class="times" id="prayer-times">
         </div>
-        <div class="footer">
-            <span>Jadwal Lengkap</span>
-            <i class="fas fa-arrow-right"></i>
-        </div>
+        <div class="footer" onclick="window.open('https://example.com/jadwal-lengkap', '_blank')">
+        <span>Jadwal Lengkap</span>
+        <i class="fas fa-arrow-right"></i>
+    </div>
+
+    
+    <div class="footer" onclick="window.open('https://example.com/donasi', '_blank')">
+        <span>Donasi</span>
+        <i class="fas fa-hand-holding-heart"></i>
+    </div>
     </div>
     <div class="copyright">
         © 2025 Raihan_official0307 - Wilayah Medan dan Sekitarnya
