--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
         </div>
         <div class="times" id="prayer-times">
         </div>
-        <div class="footer" onclick="window.open('https://example.com/jadwal-lengkap', '_blank')">
+        <div class="footer" onclick="window.open('https://www.google.com/amp/s/amp.kompas.com/tren/read/2025/02/28/231000065/jadwal-imsakiyah-medan-selama-ramadhan-2025', '_blank')">
         <span>Jadwal Lengkap</span>
         <i class="fas fa-arrow-right"></i>
-    </div>
-
-    
-    <div class="footer" onclick="window.open('https://example.com/donasi', '_blank')">
+        </div><hr>
+    <div class="footer" onclick="window.open('https://saweria.co/Raihanofficial0307', '_blank')">
         <span>Donasi</span>
         <i class="fas fa-hand-holding-heart"></i>
     </div>
