--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="footer" onclick="window.open('https://www.google.com/amp/s/amp.kompas.com/tren/read/2025/02/28/231000065/jadwal-imsakiyah-medan-selama-ramadhan-2025', '_blank')">
         <span>Jadwal Lengkap</span>
         <i class="fas fa-arrow-right"></i>
-        </div><hr>
+        </div>
     <div class="footer" onclick="window.open('https://saweria.co/Raihanofficial0307', '_blank')">
         <span>Donasi</span>
         <i class="fas fa-hand-holding-heart"></i>
